@@ -1,6 +1,7 @@
 0.1712
     - you can set any string as separator
     - fixed memory leak and connection increasing bug, and query_buider method return new object.
+    - added EXPERIMENTAL system_table attribute
 0.1711
     - renamed EXPERIMENTAL available_type_name to available_typename
     - renamed EXPERIMENTAL available_data_type to available_datatype
